# Daduhe-AI

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
services/intelligence/agent-reasoning/: CONTEXT.md  Dockerfile  PRD.md  pyproject.toml  requirements.txt
services/intelligence/agent-reasoning/config/: tools.yaml
services/intelligence/agent-reasoning/issues/: issue-01-foundation.md  issue-02-retrieval-pipeline.md  issue-03-generator.md  issue-04-supervisor.md  issue-05-context-resolution.md  issue-06-llm-factory.md  issue-07-full-integration.md
services/intelligence/agent-reasoning/src/: __init__.py  main.py  models.py  settings.py
services/intelligence/agent-reasoning/tests/: conftest.py  integration_report.json  integration_test_report.md  test_context_resolution.py  test_full_integration.py  test_generator.py  test_llm_factory.py  test_retrieval_pipeline.py  test_smoke.py  test_sse_stream.py  test_store.py  test_supervisor.py
services/intelligence/graph-engine/: Dockerfile  HANDOFF.md  PRD.md  memgraph-podman.md  pyproject.toml  requirements.txt  test_report.md
services/intelligence/graph-engine/issues/: 01-project-scaffold.md  02-memgraph-storage.md  03a-llm-client-cache.md  03b-prompt-profile-extract.md  03c-gleaning-merge-write.md  03d-extract-api-worker.md  04-graph-query-api.md  05-integration-tests.md
services/intelligence/graph-engine/memgraph-doc/: Python_quick_start.md
services/intelligence/graph-engine/src/: __init__.py  main.py  models.py  settings.py
services/intelligence/llm-gateway/: Dockerfile  pyproject.toml  requirements.txt
(+148 files in other folders)
