[project]
name = "agent-reasoning"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "daduhe-common",
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "psycopg2-binary>=2.9.9",
    "langgraph>=1.0.0",
    "pydantic-settings>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.15.20",
]

[tool.uv.sources]
daduhe-common = { workspace = true }
