[project]
name = "graph-engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "daduhe-common",
    "httpx>=0.27.0",
    "lightrag-hku",
    "neo4j>=5.20.0",
    "prometheus-client>=0.16.0",
    "pymilvus>=2.4.0",
    "psycopg2-binary>=2.9.9",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.uv.sources]
daduhe-common = { workspace = true }
lightrag-hku = { path = "../../../../LightRAG" }

[tool.pytest.ini_options]
asyncio_mode = "auto"