[project]
name = "llm-gateway"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "daduhe-common",
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "psycopg2-binary>=2.9.9",
    "pydantic-settings>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.uv.sources]
daduhe-common = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
